chore(); Adds PWA, better UI experience and animations

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <nb-layout>
 
   <nb-layout-header fixed>
-  Jogo da Velha =)
+    <app-header></app-header>
   </nb-layout-header>
 
   <nb-layout-column>
@@ -12,7 +12,7 @@
   </nb-layout-column>
 
   <nb-layout-footer fixed>
-   Made with love by Danton Godoy
+   <app-footer></app-footer>
   </nb-layout-footer>
 
 </nb-layout>
