--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Tenali+Ramakrishna&display=swap');
+
 @import 'themes';
 
 @import '~@nebular/theme/styles/globals';
@@ -5,4 +7,6 @@
 @include nb-install() {
   @include nb-theme-global();
 };
+
 /* You can add global styles to this file, and also import other style files */
+
